--- a/jewelry-project/styles.css
+++ b/jewelry-project/styles.css
@@ -3,9 +3,40 @@
   margin: 0;
   padding: 0;
   background-color: black;
-  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  color: white;
+}
+a {
+  color: white;
+}
+a:hover {
+  color: grey;
+}
+a:visited {
+  color: orange;
 }
 /* Logo & Navigation CSS */
+header {
+  padding-top: 10px;
+}
+nav ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  color: white;
+  margin: 0 25px;
+  justify-content: space-around;
+}
+
+nav li {
+  color: white;
+  margin-right: 1em;
+  text-align: center;
+  padding: 10px 5px;
+  margin: 10px 10px;
+  border-radius: 2px;
+}
 
 /*  Main Body CSS */
 video {
@@ -23,16 +54,19 @@ header img {
 section {
   display: flex;
   color: white;
+  text-align: center;
 }
-section p {
-  color: white;
-}
+
 .info div {
   background-color: white;
   color: black;
   margin: 100px;
+  width: 420px;
+  height: 300px;
 }
-
+.info img {
+  width: 100%;
+}
 /* Footer CSS */
 
 footer {
@@ -47,4 +81,5 @@ footer img {
 
 footer p {
   color: white;
+  margin: 10px;
 }
