--- a/jewelry-project/styles.css
+++ b/jewelry-project/styles.css
@@ -9,6 +9,8 @@
 }
 a {
   color: white;
+  text-decoration: none;
+  font: monaco;
 }
 a:hover {
   color: grey;
@@ -31,11 +33,13 @@ nav ul {
 
 nav li {
   color: white;
+  font-size: 1.5em;
   margin-right: 1em;
   text-align: center;
   padding: 10px 5px;
   margin: 10px 10px;
   border-radius: 2px;
+  text-decoration: none;
 }
 
 /*  Main Body CSS */
@@ -44,7 +48,9 @@ video {
   width: 100%;
   height: 100%;
 }
-
+#tagLine {
+  text-align: center;
+}
 header img {
   width: 100%;
   background-color: black;
